# StateOfMind

./: .gitignore  CMakeLists.txt  README.md  file_id.diz  makefile
3d_src/: 3d_io.c  render.c  sv_world.c  vista.c
3d_src/mcube/: mcube3.c
au_src/: audio.c  drv_sdl.c  init.c
bsp_src/: bsp.c  bsp_splt.c  bsp_tree.c
dem/include/: demo.h
dem/src/: debug.c  demo.c  fonts2.c  part2.c  spans.c
demo_src/: dmaskout.c  io.c  lzw_dec.c  mem_btm.c  pak.c  timers.c
include/: anim.h  array.h  audio.h  bit_strm.h  blob.h  box.h  bsp.h  btm.h  camera.h  colfader.h  config.h  demo_drv.h  dmask.h  driver.h  drv_io.h  drv_sdl.h  drv_vbe.h  edges.h  group.h  light.h  lzw.h  main.h  main3d.h  masks.h  mat.h  mcube.h  mem_btm.h  mem_map.h  mesh.h  move.h  mp3.h  node.h  obj.h  pak.h  parts.h  poly.h  ray.h  render.h  shader.h  sprite.h  (+10 more)
lib_src/: driver.c  drv_col.c  drv_sdl.c  mem_map.c  msg.c
mpg_src/: mp3.h  mp3quant.c  wlt_strm.c
ray_src/: rad.c
util/: generate_hq_soundtrack.py  make_release.py  unpack_data_file.py
